// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component tests Default Link 1`] = `
<View
  accessibilityLabel="Link to Bing"
  accessibilityRole="link"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
  tooltip="https://www.bing.com"
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      {
        "alignSelf": "flex-start",
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;

exports[`Link component tests Default Link as a pressable 1`] = `
<View
  accessibilityLabel="Link to Bing"
  accessibilityRole="link"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      {
        "alignSelf": "flex-start",
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;

exports[`Link component tests Inline Link 1`] = `
<View
  accessibilityLabel="Link to Bing"
  accessibilityRole="link"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
  tooltip="https://www.bing.com"
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      {
        "alignSelf": "flex-start",
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "textDecorationLine": "underline",
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;

exports[`Link component tests Subtle Link 1`] = `
<View
  accessibilityLabel="Link to Bing"
  accessibilityRole="link"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  appearance="subtle"
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
  tooltip="https://www.bing.com"
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      {
        "alignSelf": "flex-start",
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;
